<resources>
    <string name="app_name">TesseractTest</string>
    <string name="action_settings">Settings</string>
    <string name="camera">拍照</string>
    <string name="albums">相冊選取</string>
    <string name="two_way">二值化處理</string>
    <string name="result">結果</string>
    <string name="select">選取的圖片：</string>
    <string name="processimage">預處理後的圖片：</string>
    <string name="identification_fail">識別失敗</string>
    <string name="identificationings">識別中......</string>
    <string name="preprocess">預處理中......</string>
</resources>